Draft of package loader

--- a/examples/Evaluation.ipynb
+++ b/examples/Evaluation.ipynb
@@ -27,7 +27,8 @@
    "metadata": {},
    "source": [
     "# DECODE - Evaluation\n",
-    "In the following we show what DECODE provides in terms of evaluation. Please be advised to have a read of the Introduction notebook first.\n",
+    "In the following we show what DECODE provides in terms of evaluation.\n",
+    "Please be advised to have a read of the Introduction notebook first.\n",
     "Evaluation always acts on two sets of emitters, mostly prediction and reference (i.e. ground truth). In the following we show some toy examples.\n",
     "\n",
     "## Evaluation Pipeline\n",
