--- a/examples/Fit.ipynb
+++ b/examples/Fit.ipynb
@@ -473,7 +473,7 @@
    "metadata": {},
    "source": [
     "It is almost always beneficial for the image quality to remove the worst localizations. \n",
-    "Below we remove all localization which with uncertainties that exceed 40 nm in x,y or 80 nm in z.  \n",
+    "Below we remove all localizations with uncertainties that exceed 40 nm in x,y or 80 nm in z.  \n",
     "This leaves us with 74% of the detections. If you compare the rendering to the previous (unfiltered) one, you can see that this procedure eliminated all visible artefacts.  "
    ]
   },
