--- a/examples/Fit.ipynb
+++ b/examples/Fit.ipynb
@@ -27,10 +27,10 @@
    },
    "outputs": [],
    "source": [
-    "# To be removed\n",
-    "import os\n",
-    "os.chdir('/home/lucas/RemoteDeploy/DeepSMLM/')\n",
-    "os.environ['CUDA_VISIBLE_DEVICES']='1'"
+    "# To be removed from public example\n",
+    "# import os\n",
+    "# os.chdir('/home/lucas/RemoteDeploy/DeepSMLM/')\n",
+    "# os.environ['CUDA_VISIBLE_DEVICES']='1'"
    ]
   },
   {
@@ -167,11 +167,11 @@
     "path = Path('')\n",
     "\n",
     "# change here for other files\n",
-    "package = gateway['examples']['package_1']\n",
+    "package = gateway['examples']['package_fit_1']\n",
     "\n",
     "# get paths to files\n",
     "frame_path, meta_path, model_path, param_path = decode.utils.example_helper.load_example_package(\n",
-    "    path=(path / package['name']).with_suffix('.zip'), url=package['url'], hash=package['hash'])\n",
+    "    path=(path / package['name']).with_suffix('.zip'), url=package['url'], hash=package['hash'], mode='fit')\n",
     "\n",
     "\n",
     "# load meta information (em gain of tif etc.)\n",
