Yet another update

--- a/examples/Training.ipynb
+++ b/examples/Training.ipynb
@@ -396,8 +396,7 @@
     }
    },
    "source": [
-    "To start training execute the following cell. \n",
-    "> If you cloned the repository, you can also start the training script in your terminal (from your DECODE directory):\n",
+    "To start training execute the following cell or you can also start the training script in your terminal\n",
     "\n",
     "    python -m decode.neuralfitter.train.live_engine -p notebook_example.yaml  # change path if you modified it\n",
     "\n",
@@ -419,6 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# run from here or from terminal as specified above\n",
     "decode.neuralfitter.train.live_engine.live_engine_setup(param_file=param_out_path)"
    ]
   }
