--- a/examples/Fit.ipynb
+++ b/examples/Fit.ipynb
@@ -28,9 +28,9 @@
    "outputs": [],
    "source": [
     "# To be removed from public example\n",
-    "import os\n",
-    "os.chdir('/home/lucas/RemoteDeploy/DeepSMLM/')\n",
-    "os.environ['CUDA_VISIBLE_DEVICES']='0'"
+    "# import os\n",
+    "# os.chdir('/home/lucas/RemoteDeploy/DeepSMLM/')\n",
+    "# os.environ['CUDA_VISIBLE_DEVICES']='0'"
    ]
   },
   {
