Warn about CPU training

--- a/examples/Training.ipynb
+++ b/examples/Training.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "source": [
     "## Set parameters\n",
-    "Set device for inference (i.e. CUDA vs. CPU, for our setup inference on the CPU is about 10 times slower)"
+    "Set device for training. We **do not recommend training on CPU** since this will be quite slow."
    ]
   },
   {
