Clearify Training.ipynb

--- a/examples/Training.ipynb
+++ b/examples/Training.ipynb
@@ -516,9 +516,10 @@
     "\n",
     "    python -m decode.neuralfitter.train.live_engine -p notebook_example.yaml  # change path if you modified it\n",
     "\n",
-    "To check training progress you should start a tensorboard. Please navigate (within the terminal) to the directory of this notebook and start tensorboard.\n",
+    "To check training progress you should start a tensorboard. Please navigate (within the terminal, in a new terminal window/tab) to the directory of this notebook and start tensorboard. Don't forget to activate the conda environment before starting tensorboard.\n",
     "\n",
     "    cd [directory which containts 'runs', i.e. this notebook's path]\n",
+    "    conda activate decode_env\n",
     "    tensorboard --samples_per_plugin images=100 --port=6006 --logdir=runs\n",
     "\n",
     "And open it in your browser: http://localhost:6006\n",
