Soften thread comment

--- a/examples/Training.ipynb
+++ b/examples/Training.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "device = 'cuda:0'  # or 'cpu', or you change cuda device index\n",
-    "threads = 4  #  number of threads, useful for CPU heavy computation. Change if you train CPU only and have more cores\n",
+    "threads = 4  #  number of threads, useful for CPU heavy computation. Change if you know what you are doing.\n",
     "worker = 4  # number of workers for data loading. Change only if you know what you are doing.\n",
     "\n",
     "torch.set_num_threads(threads)  # set num threads"
