Rm mode in load example package in notebook.

--- a/examples/Fit.ipynb
+++ b/examples/Fit.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "device = 'cuda:0'  # or 'cpu', or you change cuda device index\n",
-    "threads = 4  #  number of threads, useful for CPU heavy computation. Change if you train CPU only and have more cores\n",
+    "threads = 4  #  number of threads, useful for CPU heavy computation. Change if you know what you are doing.\n",
     "worker = 4  # number of workers for data loading. Change only if you know what you are doing.\n",
     "\n",
     "torch.set_num_threads(threads)  # set num threads"
@@ -151,7 +151,7 @@
     "\n",
     "# get paths to files\n",
     "zip_folder = decode.utils.example_helper.load_example_package(\n",
-    "    path=(path / package['name']).with_suffix('.zip'), url=package['url'], hash=package['hash'], mode='fit')\n",
+    "    path=(path / package['name']).with_suffix('.zip'), url=package['url'], hash=package['hash'])\n",
     "\n",
     "frame_path = zip_folder / 'frames.tif'\n",
     "meta_path = zip_folder / 'meta.yaml'\n",
