--- a/examples/Training.ipynb
+++ b/examples/Training.ipynb
@@ -85,7 +85,7 @@
     "\n",
     "# get paths to files\n",
     "zip_folder = decode.utils.example_helper.load_example_package(\n",
-    "    path=(path / package['name']).with_suffix('.zip'), url=package['url'], hash=package['hash'], mode='train')\n",
+    "    path=(path / package['name']).with_suffix('.zip'), url=package['url'], hash=package['hash'])\n",
     "\n",
     "calib_file = str(zip_folder / 'spline_calibration_3dcal.mat')"
    ]
