--- a/decode/utils/examples/Training.ipynb
+++ b/decode/utils/examples/Training.ipynb
@@ -402,17 +402,20 @@
     }
    },
    "source": [
-    "To start training execute the following cell or you can also start the training script in your terminal\n",
+    "# Start the Actual Training of the Model\n",
+    "To start training we highly recommend to start it from a new terminal window/Anaconda prompt. So please open up a new terminal, activate the respective environment and start the training.\n",
     "\n",
+    "    conda activate decode_env\n",
+    "    cd [directory where this notebook is]\n",
     "    python -m decode.neuralfitter.train.live_engine -p notebook_example.yaml  # change path if you modified it\n",
     "\n",
-    "To check training progress you should start a tensorboard. Please navigate (within the terminal, in a new terminal window/tab) to the directory of this notebook and start tensorboard. Don't forget to activate the conda environment before starting tensorboard.\n",
+    "To check training progress you may start a tensorboard instance. Again, please open a new terminal instancePlease navigate (within the terminal, in a new terminal window/tab) to the directory of this notebook and start tensorboard. Don't forget to activate the conda environment before starting tensorboard.\n",
     "\n",
     "    cd [directory which containts 'runs', i.e. this notebook's path]\n",
     "    conda activate decode_env\n",
     "    tensorboard --samples_per_plugin images=100 --port=6006 --logdir=runs\n",
     "\n",
-    "And open it in your browser: http://localhost:6006\n",
+    "Open it in your browser: http://localhost:6006\n",
     "Numereous evaluation metrics are tracked here. Under the 'Images' header you can see example frames and localizations.   \n",
     "Keep in mind though that these are all calculated on the simulated data. So you can check whether the training has converged, \n",
     "but you'll have to run the model on the actual data to see if you set the parameters correctly.\n",
@@ -425,24 +428,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# run from here or from terminal as specified above\n",
-    "decode.neuralfitter.train.live_engine.live_engine_setup(param_file=param_out_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:decode_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-decode_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -454,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
