--- a/decode/utils/examples/Training.ipynb
+++ b/decode/utils/examples/Training.ipynb
@@ -53,7 +53,8 @@
    },
    "outputs": [],
    "source": [
-    "device = 'cuda:0'  # or 'cpu', or you change cuda device index\n",
+    "device = 'cuda'  # or 'cpu'\n",
+    "device_ix = 0  # possibly change device index (only for cuda)\n",
     "threads = 4  #  number of threads, useful for CPU heavy computation. Change if you know what you are doing.\n",
     "worker = 4  # number of workers for data loading. Change only if you know what you are doing.\n",
     "\n",
@@ -154,6 +155,7 @@
     "param = decode.utils.param_io.load_params('param_friendly.yaml')  # change path if you load custom file\n",
     "\n",
     "param.Hardware.device = device\n",
+    "param.Hardware.device_ix = device_ix\n",
     "param.Hardware.device_simulation = device\n",
     "param.Hardware.torch_threads = threads\n",
     "param.Hardware.num_worker_train = worker"
@@ -212,11 +214,11 @@
    },
    "outputs": [],
    "source": [
-    "param.Simulation.bg_uniform = [20.0, 100.0]           # background range to sample from. You can also specify a const. value as 'bg_uniform = 100'\n",
-    "param.Simulation.emitter_av = 20                      # Average number of emitters per frame\n",
+    "param.Simulation.bg_uniform = [20.0, 200.0]           # background range to sample from. You can also specify a const. value as 'bg_uniform = 100'\n",
+    "param.Simulation.emitter_av = 25                      # Average number of emitters per frame\n",
     "param.Simulation.emitter_extent[2] = [-800, 800]    # Volume in which emitters are sampled. x,y values should not be changed. z-range (in nm) should be adjusted according to the PSF\n",
     "param.Simulation.intensity_mu_sig = [7000.0, 3000.0]  # Average intensity and its standard deviation\n",
-    "param.Simulation.lifetime_avg = 2                     # Average lifetime of each emitter in frames. 2 works for most experiments\n",
+    "param.Simulation.lifetime_avg = 1.                     # Average lifetime of each emitter in frames. A value between 1 and 2 works for most experiments\n",
     "\n",
     "param.Simulation.to_dict()"
    ]
@@ -433,9 +435,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:decode_env]",
+   "display_name": "Python [conda env:decode_env_rc4]",
    "language": "python",
-   "name": "conda-env-decode_env-py"
+   "name": "conda-env-decode_env_rc4-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -447,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
