Update training notebook

--- a/decode/utils/examples/Training.ipynb
+++ b/decode/utils/examples/Training.ipynb
@@ -405,11 +405,13 @@
    },
    "source": [
     "# Start the Actual Training of the Model\n",
-    "To start training we highly recommend to start it from a new terminal window/Anaconda prompt. So please open up a new terminal, activate the respective environment and start the training.\n",
+    "To start training we recommend to start it from a new terminal window/Anaconda prompt as this is most stable. So please open up a new terminal, activate the respective environment and start the training.\n",
     "\n",
     "    conda activate decode_env\n",
     "    cd [directory where this notebook is]\n",
     "    python -m decode.neuralfitter.train.live_engine -p notebook_example.yaml  # change path if you modified it\n",
+    "    \n",
+    "In case you experience multiprocessing issues, please consult our FAQ (https://decode.readthedocs.io/en/master/faq.html). You may run the command above with the additional `-w 0` flag.\n",
     "\n",
     "To check training progress you may start a tensorboard instance. Again, please open a new terminal instancePlease navigate (within the terminal, in a new terminal window/tab) to the directory of this notebook and start tensorboard. Don't forget to activate the conda environment before starting tensorboard.\n",
     "\n",
