Rename Post-Processing NMS to Spatial Integration
Because misleading.

--- a/decode/utils/examples/Fit.ipynb
+++ b/decode/utils/examples/Fit.ipynb
@@ -270,7 +270,7 @@
     "                                                          yextent=frame_extent[1],\n",
     "                                                          img_shape=size_procced[-2:]),\n",
     "    \n",
-    "    decode.neuralfitter.post_processing.NMSPostProcessing(raw_th=0.1,\n",
+    "    decode.neuralfitter.post_processing.SpatialIntegration(raw_th=0.1,\n",
     "                                                          xy_unit='px', \n",
     "                                                          px_size=param.Camera.px_size)\n",
     "    \n",
