--- a/decode/utils/examples/Fit.ipynb
+++ b/decode/utils/examples/Fit.ipynb
@@ -17,7 +17,6 @@
      "end_time": "2020-10-10T16:31:53.707922Z",
      "start_time": "2020-10-10T16:31:49.338797Z"
     },
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -123,7 +122,6 @@
      "end_time": "2020-10-10T16:31:53.740374Z",
      "start_time": "2020-10-10T16:31:53.733195Z"
     },
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -351,6 +349,42 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-15T15:07:26.697906Z",
+     "start_time": "2021-02-15T15:07:26.616336Z"
+    }
+   },
+   "source": [
+    "Here we compare the inferred distribution of the photon numbers and background values with the ranges used during training.  \n",
+    "If the inferred values fall outside of the green regions, or are concentrated in a small subspace of it, it might make sense to adjust the simulation parameters and retrain the the network."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy\n",
+    "plt.figure(figsize=(14,4))\n",
+    "plt.subplot(131)\n",
+    "mu, sig = param.Simulation.intensity_mu_sig\n",
+    "plt.axvspan(0, mu+sig*3, color='green', alpha=0.3)\n",
+    "sns.distplot(emitter.phot.numpy())\n",
+    "plt.xlabel('Inferred number of photons')\n",
+    "plt.xlim(0)\n",
+    "\n",
+    "plt.subplot(132)\n",
+    "plt.axvspan(*param.Simulation.bg_uniform, color='green', alpha=0.3)\n",
+    "sns.distplot(emitter.bg.numpy())\n",
+    "plt.xlabel('Inferred background values')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "We provide a simple histogram rendering procedure for initial evaluation. You can specify the pixel size in nm, the sigma value for a Gaussian blur, an a clipping value for the brightness to control the color range."
@@ -535,9 +569,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:decode_env]",
+   "display_name": "Python [conda env:decode_dev_cuda]",
    "language": "python",
-   "name": "conda-env-decode_env-py"
+   "name": "conda-env-decode_dev_cuda-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -549,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
