Add description to decode saving to introduction notebook

--- a/decode/utils/examples/Introduction.ipynb
+++ b/decode/utils/examples/Introduction.ipynb
@@ -124,10 +124,14 @@
    "metadata": {},
    "source": [
     "### Export, Save and Load Emitters\n",
-    "We feature several methods to export, save, load emitters. \n",
-    "1. To interact with another software the most simple format is exporting as a csv file, however this is not recommended for long term use. If you need assistance with the design of an interface to your software, please write us.\n",
+    "We support several methods to export, save, load emitters. Those are *csv, hdf5, pt*\n",
     "\n",
-    "2. For fast read/write and smaller files we recommend using the `.save()` method which saves the emitterset as a dictionary of PyTorch tensors and some meta data. Note that this does not have long term \n",
+    "1. [csv] To interact with another software the most simple format is exporting as a csv file, however this is not recommended for regular use.\n",
+    "2. [hdf5] The most sophisticated and long term capable format is hdf5.\n",
+    "2. [pt] For fast read/write and smaller files we recommend using the `.save()` method which saves the emitterset as a dictionary of PyTorch tensors and some meta data. Note that this does not have long term\n",
+    "\n",
+    "Saving and loading is done by calling the emitters `.save()` and `.load()` method or explicitly via the `utils.emitter_io` functions.\n",
+    "Due to the variety of possibilities for .csv files you have to call `utils.emitter_io.load_csv` explicitly for loading.\n",
     "\n",
     "> CSV Export and Import"
    ]
@@ -246,7 +250,7 @@
    "source": [
     "# csv export and import\n",
     "# write to a csv file\n",
-    "decode.utils.emitter_io.save_csv('dummy.csv', em.to_dict())  # convert emitter to dictionary\n",
+    "em.save('dummy.csv')  # convert emitter to dictionary\n",
     "\n",
     "# have a look at the csv\n",
     "import pandas as pd\n",
@@ -313,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "em.save('dummy.pt')  # we recommend file extension .pt but do not enforce this in any way"
+    "em.save('dummy.pt')  # use .pt to store in pytorch native save fromat"
    ]
   },
   {
