Add verification to fitting notebook, update save examples.

--- a/decode/utils/examples/Fit.ipynb
+++ b/decode/utils/examples/Fit.ipynb
@@ -17,6 +17,7 @@
      "end_time": "2020-10-10T16:31:53.707922Z",
      "start_time": "2020-10-10T16:31:49.338797Z"
     },
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -32,6 +33,7 @@
     "import torch\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "from pathlib import Path\n",
     "import yaml"
    ]
@@ -57,7 +59,7 @@
    "source": [
     "device = 'cuda:0'  # or 'cpu', or you change cuda device index\n",
     "threads = 4  #  number of threads, useful for CPU heavy computation. Change if you know what you are doing.\n",
-    "worker = 4  # number of workers for data loading. Change only if you know what you are doing.\n",
+    "worker = 0  # number of workers for data loading. Used a default of 0 for safety. Multiprocessing on windows is sometimes not stable\n",
     "\n",
     "torch.set_num_threads(threads)  # set num threads"
    ]
@@ -122,6 +124,7 @@
      "end_time": "2020-10-10T16:31:53.740374Z",
      "start_time": "2020-10-10T16:31:53.733195Z"
     },
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -349,12 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-02-15T15:07:26.697906Z",
-     "start_time": "2021-02-15T15:07:26.616336Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "Here we compare the inferred distribution of the photon numbers and background values with the ranges used during training.  \n",
     "If the inferred values fall outside of the green regions, or are concentrated in a small subspace of it, it might make sense to adjust the simulation parameters and retrain the the network."
@@ -366,17 +364,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy\n",
     "plt.figure(figsize=(14,4))\n",
+    "\n",
     "plt.subplot(131)\n",
     "mu, sig = param.Simulation.intensity_mu_sig\n",
-    "plt.axvspan(0, mu+sig*3, color='green', alpha=0.3)\n",
+    "plt.axvspan(0, mu+sig*3, color='green', alpha=0.1)\n",
     "sns.distplot(emitter.phot.numpy())\n",
     "plt.xlabel('Inferred number of photons')\n",
     "plt.xlim(0)\n",
     "\n",
     "plt.subplot(132)\n",
-    "plt.axvspan(*param.Simulation.bg_uniform, color='green', alpha=0.3)\n",
+    "plt.axvspan(*param.Simulation.bg_uniform, color='green', alpha=0.1)\n",
     "sns.distplot(emitter.bg.numpy())\n",
     "plt.xlabel('Inferred background values')\n",
     "\n",
@@ -435,15 +433,15 @@
    "source": [
     "plt.figure(figsize=(14,4))\n",
     "plt.subplot(131)\n",
-    "plt.hist(emitter.xyz_sig_nm[:, 0].numpy())\n",
+    "sns.distplot(emitter.xyz_sig_nm[:, 0].numpy())\n",
     "plt.xlabel('Sigma Estimate in X (nm)')\n",
     "\n",
     "plt.subplot(132)\n",
-    "plt.hist(emitter.xyz_sig_nm[:, 1].numpy())\n",
+    "sns.distplot(emitter.xyz_sig_nm[:, 1].numpy())\n",
     "plt.xlabel('Sigma Estimate in Y (nm)')\n",
     "\n",
     "plt.subplot(133)\n",
-    "plt.hist(emitter.xyz_sig_nm[:, 2].numpy())\n",
+    "sns.distplot(emitter.xyz_sig_nm[:, 2].numpy())\n",
     "plt.xlabel('Sigma Estimate in Z (nm)')\n",
     "\n",
     "plt.show()"
@@ -517,10 +515,13 @@
    "metadata": {},
    "source": [
     "## Save EmitterSet\n",
-    "There a different options to export your fitting results for later use. \n",
+    "There a different options to export your fitting results for later use.\n",
+    "We support:\n",
+    "- CSV files: Human readable and compatible with most other frameworks The simplest one is saving it in CSV format which is compatible with most other frameworks. \n",
+    "- HDF5 files: Well suited for large file, also supported by many frameworks\n",
+    "- PT files: Pytorch native saving. Useful for debugging or fast i/o. Not for longterm storage.\n",
     "\n",
-    "- The simplest one is saving it in CSV format which is compatible with most other frameworks. \n",
-    "- Another option is saving via the native method `.save()` For this we use the backend of PyTorch, stored will be a dictionary of pytorch tensors as well as some meta information. "
+    "All of these formats are derived automatically by the file extension upon using the `.save(filename)` method"
    ]
   },
   {
@@ -538,7 +539,7 @@
    "outputs": [],
    "source": [
     "# csv export (loadable by most frameworks)\n",
-    "decode.utils.emitter_io.save_csv('emitter.csv', emitter.to_dict())"
+    "emitter.save('emitter.csv')"
    ]
   },
   {
@@ -564,14 +565,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# hdf5 save\n",
+    "emitter.save('emitter.h5')  # can be loaded via 'decode.EmitterSet.load('emitter.h5')'"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:decode_dev_cuda]",
+   "display_name": "Python [conda env:decode_dev_cuda_torch_v17]",
    "language": "python",
-   "name": "conda-env-decode_dev_cuda-py"
+   "name": "conda-env-decode_dev_cuda_torch_v17-py"
   },
   "language_info": {
    "codemirror_mode": {
