Update fitting notebook to interfaces

--- a/decode/utils/examples/Fit.ipynb
+++ b/decode/utils/examples/Fit.ipynb
@@ -73,7 +73,7 @@
    },
    "source": [
     "## Specify paths for the model, parameters and frames\n",
-    "If you trained you own model (using the Training notebook) you can specify it's path here. \n",
+    "If you trained you own model (using the Training notebook) you can specify it's path here.\n",
     "\n",
     "**Important** If the camera parameters of the training differ from the data which should be fitted (e.g. different EM gain), you can try to use the model anyways, but you must specify them here since we convert to photon units before forwarding through the model."
    ]
@@ -264,18 +264,18 @@
     "# Setup post-processing\n",
     "# It's a sequence of backscaling, relative to abs. coord conversion and frame2emitter conversion\n",
     "post_proc = decode.neuralfitter.utils.processing.TransformSequence([\n",
-    "    \n",
+    "\n",
     "    decode.neuralfitter.scale_transform.InverseParamListRescale.parse(param),\n",
-    "    \n",
+    "\n",
     "    decode.neuralfitter.coord_transform.Offset2Coordinate(xextent=frame_extent[0],\n",
     "                                                          yextent=frame_extent[1],\n",
     "                                                          img_shape=size_procced[-2:]),\n",
-    "    \n",
+    "\n",
     "    decode.neuralfitter.post_processing.SpatialIntegration(raw_th=0.1,\n",
-    "                                                          xy_unit='px', \n",
+    "                                                          xy_unit='px',\n",
     "                                                          px_size=param.Camera.px_size)\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "])"
    ]
   },
@@ -345,7 +345,7 @@
     "plt.subplot(121)\n",
     "decode.plot.PlotFrameCoord(frame=frame_proc.forward(frames[[random_ix]])).plot()\n",
     "plt.subplot(122)\n",
-    "decode.plot.PlotFrameCoord(frame=frame_proc.forward(frames[[random_ix]]), \n",
+    "decode.plot.PlotFrameCoord(frame=frame_proc.forward(frames[[random_ix]]),\n",
     "                           pos_out=em_subset.xyz_px, phot_out=em_subset.prob).plot()\n",
     "plt.show()"
    ]
@@ -354,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we compare the inferred distribution of the photon numbers and background values with the ranges used during training.  \n",
+    "Here we compare the inferred distribution of the photon numbers and background values with the ranges used during training.\n",
     "If the inferred values fall outside of the green regions, or are concentrated in a small subspace of it, it might make sense to adjust the simulation parameters and retrain the the network."
    ]
   },
@@ -416,7 +416,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DECODE will in general detect very high numbers of emitters, including those with high uncertainties.  \n",
+    "DECODE will in general detect very high numbers of emitters, including those with high uncertainties.\n",
     "Fortunately every DECODE prediction includes uncertainty estimates in x,y and z which we plot here."
    ]
   },
@@ -451,10 +451,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is almost always beneficial for the image quality to remove the worst localizations. \n",
+    "It is almost always beneficial for the image quality to remove the worst localizations.\n",
     "Below we remove all localizations with uncertainties that exceed 40 nm in x,y or 80 nm in z.\n",
     "This leaves us with 74% of the detections. Alternatively you can specify the remaining percentage directly with the `emitter.filter_by_sigma(fraction)` method.\n",
-    "If you compare the rendering to the previous (unfiltered) one, you can see that this procedure eliminated all visible artefacts.  "
+    "If you compare the rendering to the previous (unfiltered) one, you can see that this procedure eliminated all visible artefacts."
    ]
   },
   {
@@ -468,9 +468,9 @@
    },
    "outputs": [],
    "source": [
-    "sigma_x_high_threshold = 40 \n",
-    "sigma_y_high_threshold = 40 \n",
-    "sigma_z_high_threshold = 80 \n",
+    "sigma_x_high_threshold = 40\n",
+    "sigma_y_high_threshold = 40\n",
+    "sigma_z_high_threshold = 80\n",
     "\n",
     "em_sub = emitter[(emitter.xyz_sig_nm[:, 0] <= sigma_x_high_threshold) * (emitter.xyz_sig_nm[:, 1] <= sigma_x_high_threshold) * (emitter.xyz_sig_nm[:, 2] <= sigma_z_high_threshold)]\n",
     "# em_sub = emitter.filter_by_sigma(0.74)  # alternatively\n",
@@ -486,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instead of specifying cutoffs for the three coordinates you can also use the filter_by_sigma method to directly specify what share of the emitters you wan't to keep.   \n",
+    "Instead of specifying cutoffs for the three coordinates you can also use the filter_by_sigma method to directly specify what share of the emitters you wan't to keep.\n",
     "Below we remove the 60% of emitters with the highest weighted combined uncertainty."
    ]
   },
@@ -517,9 +517,9 @@
     "## Save EmitterSet\n",
     "There a different options to export your fitting results for later use.\n",
     "We support:\n",
-    "- CSV files: Human readable and compatible with most other frameworks The simplest one is saving it in CSV format which is compatible with most other frameworks. \n",
     "- HDF5 files: Well suited for large file, also supported by many frameworks\n",
     "- PT files: Pytorch native saving. Useful for debugging or fast i/o. Not for longterm storage.\n",
+    "- CSV files: Human readable and compatible with most other frameworks Compatible with most other frameworks, however highly discouraged if frequently used.\n",
     "\n",
     "All of these formats are derived automatically by the file extension upon using the `.save(filename)` method"
    ]
@@ -527,20 +527,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# hdf5 save\n",
+    "emitter.save('emitter.h5')  # can be loaded implicitely via 'decode.EmitterSet.load('emitter.h5')'"
+   ],
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-10T16:40:40.699199Z",
-     "start_time": "2020-10-10T16:39:41.030048Z"
-    },
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [],
-   "source": [
-    "# csv export (loadable by most frameworks)\n",
-    "emitter.save('emitter.csv')"
-   ]
+   }
   },
   {
    "cell_type": "code",
@@ -557,18 +554,41 @@
    "outputs": [],
    "source": [
     "# fast native save\n",
-    "emitter.save('emitter.pt')  # can be loaded via 'decode.EmitterSet.load('emitter.pt')'"
+    "emitter.save('emitter.pt')  # can be loaded implicitely via 'decode.EmitterSet.load('emitter.pt')'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "# hdf5 save\n",
-    "emitter.save('emitter.h5')  # can be loaded via 'decode.EmitterSet.load('emitter.h5')'"
-   ]
+    "# csv export (loadable by most frameworks)\n",
+    "emitter.save('emitter.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# to retrieve all information stored, you can call the loaders explicitley\n",
+    "em_data, em_meta, decode_meta = decode.utils.emitter_io.load_h5('emitter.h5')  # load_h5 / load_torch / load_csv\n",
+    "em_reload = decode.EmitterSet(**em_data, **em_meta)\n",
+    "\n",
+    "print(f\"Decode state at the time of saving: {decode_meta})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
