Update fit notebook

--- a/decode/utils/examples/Fit.ipynb
+++ b/decode/utils/examples/Fit.ipynb
@@ -27,6 +27,9 @@
    },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('/home/lucas/DeepSMLM/')\n",
+    "\n",
     "import decode\n",
     "import decode.utils\n",
     "\n",
@@ -515,37 +518,17 @@
    "metadata": {},
    "source": [
     "## Save EmitterSet\n",
-    "There a different options to export your fitting results for later use.\n",
-    "We support:\n",
-    "- HDF5 files: Well suited for large file, also supported by many frameworks\n",
-    "- PT files: Pytorch native saving. Useful for debugging or fast i/o. Not for longterm storage.\n",
-    "- CSV files: Human readable and compatible with most other frameworks Compatible with most other frameworks, however highly discouraged if frequently used.\n",
-    "\n",
-    "All of these formats are derived automatically by the file extension upon using the `.save(filename)` method"
+    "We support `.h5 .csv and .pt` to save an EmitterSet to file. Please consult the Introduction notebook for more\n",
+    "information."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# hdf5 save\n",
-    "emitter.save('emitter.h5')  # can be loaded implicitely via 'decode.EmitterSet.load('emitter.h5')'"
-   ],
    "metadata": {
     "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-10T16:40:44.003109Z",
-     "start_time": "2020-10-10T16:40:40.702964Z"
+    "jupyter": {
+     "outputs_hidden": false
     },
     "pycharm": {
      "name": "#%%\n"
@@ -553,42 +536,8 @@
    },
    "outputs": [],
    "source": [
-    "# fast native save\n",
-    "emitter.save('emitter.pt')  # can be loaded implicitely via 'decode.EmitterSet.load('emitter.pt')'"
+    "emitter.save('emitter.h5')  # or '.csv' or '.pt'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# csv export (loadable by most frameworks)\n",
-    "emitter.save('emitter.csv')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# to retrieve all information stored, you can call the loaders explicitley\n",
-    "em_data, em_meta, decode_meta = decode.utils.emitter_io.load_h5('emitter.h5')  # load_h5 / load_torch / load_csv\n",
-    "em_reload = decode.EmitterSet(**em_data, **em_meta)\n",
-    "\n",
-    "print(f\"Decode state at the time of saving: {decode_meta})"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
   }
  ],
  "metadata": {
