Add Decode version to notebook

--- a/decode/utils/examples/Evaluation.ipynb
+++ b/decode/utils/examples/Evaluation.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "import decode\n",
     "import torch\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "print(f\"DECODE version: {decode.utils.bookkeeping.decode_state()}\")"
    ]
   },
   {
