--- a/decode/utils/examples/Fit.ipynb
+++ b/decode/utils/examples/Fit.ipynb
@@ -27,9 +27,6 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('/home/lucas/DeepSMLM/')\n",
-    "\n",
     "import decode\n",
     "import decode.utils\n",
     "\n",
@@ -38,7 +35,9 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from pathlib import Path\n",
-    "import yaml"
+    "import yaml\n",
+    "\n",
+    "print(f\"DECODE version: {decode.utils.bookkeeping.decode_state()}\")"
    ]
   },
   {
