--- a/decode/utils/examples/Introduction.ipynb
+++ b/decode/utils/examples/Introduction.ipynb
@@ -18,7 +18,9 @@
    "source": [
     "import decode\n",
     "import decode.utils  # interfaces to outside world which are not loaded by default\n",
-    "import torch"
+    "import torch\n",
+    "\n",
+    "print(f\"DECODE version: {decode.utils.bookkeeping.decode_state()}\")"
    ]
   },
   {
