--- a/decode/utils/examples/Training.ipynb
+++ b/decode/utils/examples/Training.ipynb
@@ -17,7 +17,9 @@
     "import torch\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "\n",
+    "print(f\"DECODE version: {decode.utils.bookkeeping.decode_state()}\")"
    ]
   },
   {
