Add Mirror2d description and warning.

--- a/decode/utils/examples/Fit.ipynb
+++ b/decode/utils/examples/Fit.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-10T16:31:53.707922Z",
@@ -25,8 +25,19 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DECODE version: v0.10.0.alpha.0-124-g8123375b-dirty\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "sys.path.append('/Users/lucasmueller/git/decode')\n",
+    "\n",
     "import decode\n",
     "import decode.utils\n",
     "\n",
@@ -236,25 +247,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set Up Pre- and Post-Processing"
+    "## Set Up Pre- and Post-Processing\n",
+    "In the following we will set up the processing pipeline.\n",
+    "\n",
+    "### EM-Gain Mirroring\n",
+    "**Warning** Depending on your specific camera setup you need to modify the following pipeline a bit. In our case (using an EM-CCD camera) the beads are acquired without EM-Gain, while the experimental frames were acquired with EM-Gain. For our camera, due to some hardware specifics, EM-Gain enabled will lead the frames to be mirrored in the last dimension. Since the trained model and the experimental frames need to be consistent with respect to the PSF, we account for this mirroring by `Mirror2D(dims=-1)`.\n",
+    "Depending on your individual camera you might be able to omit this. Particularly if you are using a sCMOS camera."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-10T16:35:47.813345Z",
      "start_time": "2020-10-10T16:35:45.926295Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'camera' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-0d037c4b19af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# setup frame processing as by the parameter with which the model was trained\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m frame_proc = decode.neuralfitter.utils.processing.TransformSequence([\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mdecode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneuralfitter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrap_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcamera\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mdecode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneuralfitter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mframe_processing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAutoCenterCrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mdecode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneuralfitter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mframe_processing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMirror2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdims\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;31m# WARNING: You might need to comment this line out. see above\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'camera' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# setup frame processing as by the parameter with which the model was trained\n",
     "frame_proc = decode.neuralfitter.utils.processing.TransformSequence([\n",
     "    decode.neuralfitter.utils.processing.wrap_callable(camera.backward),\n",
     "    decode.neuralfitter.frame_processing.AutoCenterCrop(8),\n",
-    "    decode.neuralfitter.frame_processing.Mirror2D(dims=-1),\n",
+    "    decode.neuralfitter.frame_processing.Mirror2D(dims=-1),  # WARNING: You might need to comment this line out. see above\n",
     "    decode.neuralfitter.scale_transform.AmplitudeRescale.parse(param)\n",
     "])\n",
     "\n",
@@ -541,9 +569,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:decode_dev_cuda_torch_v17]",
+   "display_name": "Python [conda env:decode_dev_cpu]",
    "language": "python",
-   "name": "conda-env-decode_dev_cuda_torch_v17-py"
+   "name": "conda-env-decode_dev_cpu-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -555,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
