--- a/decode/utils/examples/Introduction.ipynb
+++ b/decode/utils/examples/Introduction.ipynb
@@ -151,7 +151,7 @@
     "em_data, em_meta, decode_meta = decode.utils.emitter_io.load_h5('emitter.h5')  # load_h5 / load_torch / load_csv\n",
     "em_reload = decode.EmitterSet(**em_data, **em_meta)\n",
     "\n",
-    "print(f\"Decode state at the time of saving: {decode_meta}\")"
+    "print(f\"Decode meta information at the time of saving: {decode_meta}\")"
    ]
   },
   {
@@ -257,7 +257,10 @@
    "outputs": [],
    "source": [
     "# split emitterset in 3 eqaul chunks\n",
-    "em_split = em.chunks(3)"
+    "em = decode.RandomEmitterSet(8)\n",
+    "em_split = em.chunks(3)\n",
+    "\n",
+    "print(f\"{len(em_split)} splits of respective lengths {[len(e) for e in em_split]}.\")"
    ]
   },
   {
@@ -322,9 +325,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:decode_dev_cuda_torch_v17]",
+   "display_name": "Python [conda env:decode_dev_cpu]",
    "language": "python",
-   "name": "conda-env-decode_dev_cuda_torch_v17-py"
+   "name": "conda-env-decode_dev_cpu-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -336,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
